--- a/index.html
+++ b/index.html
@@ -8,3 +8,21 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
 </head>
 <body>
+
+  <main>
+
+   <section>
+     <div class="wrapper">
+       <img class="section-letter img-flex" src="images/dragon-letter.svg" alt="">
+       <img class="section-icon img-flex" src="images/dragon.svg" alt="">
+       <div class="section-body">
+         <h2>Dragon</h2>
+         <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+       </div>
+     </div>
+   </section>
+
+ </main>
+
+</body>
+</html>
